Added blog template to show david at twhco

--- a/sites/twhc/apply.html
+++ b/sites/twhc/apply.html
@@ -81,11 +81,13 @@
 			</nav>
 			
 		</header>
-		
+
 		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
 			<div class="wrap wrap--narrow align-center">
-				<h1>Apply Now</h1>
-				<p class="lead">Fill in our <strong>simple 3-step form</strong> and find your freedom!</p>
+				<div class="hgroup">
+					<h1 class="hgroup__title">Apply Now</h1>
+					<p class="hgroup__lead">Fill in our <strong>simple 3-step form</strong> and find your freedom!</p>
+				</div>
 			</div>
 		</div>
 	
