--- a/sites/twhc/jobs.html
+++ b/sites/twhc/jobs.html
@@ -84,95 +84,96 @@
 		
 		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
 			<div class="wrap wrap--narrow align-center">
-				<h1>Our Jobs</h1>
-				<p class="lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+				<div class="hgroup">
+					<h1 class="hgroup__title">Our Jobs</h1>
+					<p class="hgroup__lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+				</div>
 			</div>
 		</div>
 	
 		<div class="band">
 			<div class="wrap">
 				
-				<div class="mosaic">
+				<div class="mosaic mosaic mosaic--3x3">
 					<div class="mosaic__item">
-						<div class="tile">
+						<article class="tile h-entry">
 							<a href="#" class="tile__image">
-								<img src="img/content/jobs/bar-staff.jpg" alt="ALT TEXT" />
+								<img src="img/content/jobs/bar-staff.jpg" alt="ALT TEXT" class="u-featured" />
 							</a>
 							<div class="tile__wrap">
 								<h4 class="tile__subtitle">Subtitle if needed?</h4>
-								<h2 class="tile__title"><a href="#">Bar Staff</a></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<h2 class="tile__title p-name"><a href="#">Bar Staff</a></h2>
+								<p class="p-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<div class="tile__footer"><a href="#" class="arrow-link">Read More</a></div>
 							</div>
-						</div>
+						</article>
 					</div>
 					<div class="mosaic__item">
-						<div class="tile">
+						<article class="tile h-entry">
 							<a href="#" class="tile__image">
-								<img src="img/content/jobs/boat-party-rep.jpg" alt="ALT TEXT" />
+								<img src="img/content/jobs/boat-party-rep.jpg" alt="ALT TEXT" class="u-featured" />
 							</a>
 							<div class="tile__wrap">
-								<h4 class="tile__subtitle">Subtitle if needed?</h4>
-								<h2 class="tile__title"><a href="#">Boat Party Rep</a></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<h4 class="tile__subtitle">Subtitle if needed</h4>
+								<h2 class="tile__title p-name"><a href="#">Boat Party Rep</a></h2>
+								<p class="p-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<div class="tile__footer"><a href="#" class="arrow-link">Read More</a></div>
 							</div>
-						</div>
+						</article>
 					</div>
 					<div class="mosaic__item">
-						<div class="tile">
+						<article class="tile h-entry">
 							<a href="#" class="tile__image">
-								<img src="img/content/jobs/cafe-worker.jpg" alt="ALT TEXT" />
+								<img src="img/content/jobs/cafe-worker.jpg" alt="ALT TEXT" class="u-featured" />
 							</a>
 							<div class="tile__wrap">
-								<h4 class="tile__subtitle">Subtitle if needed?</h4>
-								<h2 class="tile__title"><a href="#">Cafe Worker</a></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<h4 class="tile__subtitle">Subtitle if needed</h4>
+								<h2 class="tile__title p-name"><a href="#">Cafe Worker</a></h2>
+								<p class="p-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<div class="tile__footer"><a href="#" class="arrow-link">Read More</a></div>
 							</div>
-						</div>
+						</article>
 					</div>
 					<div class="mosaic__item">
-						<div class="tile">
+						<article class="tile h-entry">
 							<a href="#" class="tile__image">
-								<img src="img/content/jobs/dj.jpg" alt="ALT TEXT" />
+								<img src="img/content/jobs/dj.jpg" alt="ALT TEXT" class="u-featured" />
 							</a>
 							<div class="tile__wrap">
-								<h4 class="tile__subtitle">Subtitle if needed?</h4>
-								<h2 class="tile__title"><a href="#">DJ</a></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<h4 class="tile__subtitle">Subtitle if needed</h4>
+								<h2 class="tile__title p-name"><a href="#">Club DJ</a></h2>
+								<p class="p-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<div class="tile__footer"><a href="#" class="arrow-link">Read More</a></div>
 							</div>
-						</div>
+						</article>
 					</div>
 					<div class="mosaic__item">
-						<div class="tile">
+						<article class="tile h-entry">
 							<a href="#" class="tile__image">
-								<img src="img/content/jobs/glass-collector.jpg" alt="ALT TEXT" />
+								<img src="img/content/jobs/glass-collector.jpg" alt="ALT TEXT" class="u-featured" />
 							</a>
 							<div class="tile__wrap">
-								<h4 class="tile__subtitle">Subtitle if needed?</h4>
-								<h2 class="tile__title"><a href="#">Glass Collector</a></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<h4 class="tile__subtitle">Subtitle if needed</h4>
+								<h2 class="tile__title p-name"><a href="#">Glass Collector</a></h2>
+								<p class="p-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<div class="tile__footer"><a href="#" class="arrow-link">Read More</a></div>
 							</div>
-						</div>
+						</article>
 					</div>
 					<div class="mosaic__item">
-						<div class="tile">
+						<article class="tile h-entry">
 							<a href="#" class="tile__image">
-								<img src="img/content/jobs/shot-girl.jpg" alt="ALT TEXT" />
+								<img src="img/content/jobs/shot-girl.jpg" alt="ALT TEXT" class="u-featured" />
 							</a>
 							<div class="tile__wrap">
-								<h4 class="tile__subtitle">Subtitle if needed?</h4>
-								<h2 class="tile__title"><a href="#">Shot Girl</a></h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<h4 class="tile__subtitle">Subtitle if needed</h4>
+								<h2 class="tile__title p-name"><a href="#">Shot Girl</a></h2>
+								<p class="p-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<div class="tile__footer"><a href="#" class="arrow-link">Read More</a></div>
 							</div>
-						</div>
+						</article>
 					</div>
-				</div>		
-				    
+				</div>
 			</div>
 		</div>
 		
