--- a/sites/twhc/style-guide.html
+++ b/sites/twhc/style-guide.html
@@ -81,6 +81,15 @@
 			</nav>
 
 		</header>
+		
+		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
+			<div class="wrap wrap--narrow align-center">
+				<div class="hgroup">
+					<h1 class="hgroup__title">Style Guide</h1>
+					<p class="hgroup__lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+				</div>
+			</div>
+		</div>
 
 		<div class="band">
 		    <div class="wrap wrap--narrow">
