--- a/sites/twhc/404.html
+++ b/sites/twhc/404.html
@@ -82,12 +82,14 @@
 			</nav>
 			
 		</header>
-		
+
 		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
 			<div class="wrap wrap--narrow align-center">
-				<h1>404: Page not found</h1>
-				<p class="lead">We're sorry but we couldn't find the page you're looking for.</p>
-				<a href="#" class="btn">Back to Homepage</a>
+				<div class="hgroup">
+					<h1 class="hgroup__title">404: Page not found</h1>
+					<p class="hgroup__lead">We're sorry but we couldn't find the page you're looking for.</p>
+					<a href="#" class="btn btn--primary">Back to Homepage</a>
+				</div>
 			</div>
 		</div>
 		
