--- a/sites/twhc/resorts.html
+++ b/sites/twhc/resorts.html
@@ -72,7 +72,7 @@
 			<nav class="site-nav">
 				<ul class="site-nav__list">
 					<li class="site-nav__item"><a href="#" class="site-nav__link">About</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link current-menu-item">Resorts</a></li>
+					<li class="site-nav__item current-menu-item"><a href="#" class="site-nav__link">Resorts</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Packages</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Jobs</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Login</a></li>
@@ -84,8 +84,10 @@
 		
 		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
 			<div class="wrap wrap--narrow align-center">
-				<h1>Our Resorts</h1>
-				<p class="lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+				<div class="hgroup">
+					<h1 class="hgroup__title">Resorts</h1>
+					<p class="hgroup__lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+				</div>
 			</div>
 		</div>
 	
@@ -102,7 +104,7 @@
 								<h4 class="tile__subtitle">Spain</h4>
 								<h2 class="tile__title"><a href="#">Ibiza</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<div class="tile__footer"><a href="#" class="arrow-link">Find Out More</a></div>
 							</div>
 						</div>
 					</div>
@@ -115,7 +117,7 @@
 								<h4 class="tile__subtitle">Spain</h4>
 								<h2 class="tile__title"><a href="#">Magaluf</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<div class="tile__footer"><a href="#" class="arrow-link">Find Out More</a></div>
 							</div>
 						</div>
 					</div>
@@ -128,7 +130,7 @@
 								<h4 class="tile__subtitle">Australia</h4>
 								<h2 class="tile__title"><a href="#">Sydney</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<div class="tile__footer"><a href="#" class="arrow-link">Find Out More</a></div>
 							</div>
 						</div>
 					</div>
@@ -141,7 +143,7 @@
 								<h4 class="tile__subtitle">Greece</h4>
 								<h2 class="tile__title"><a href="#">Zante</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<div class="tile__footer"><a href="#" class="arrow-link">Find Out More</a></div>
 							</div>
 						</div>
 					</div>
@@ -154,7 +156,7 @@
 								<h4 class="tile__subtitle">Spain</h4>
 								<h2 class="tile__title"><a href="#">Ibiza</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<div class="tile__footer"><a href="#" class="arrow-link">Find Out More</a></div>
 							</div>
 						</div>
 					</div>
@@ -167,7 +169,7 @@
 								<h4 class="tile__subtitle">Spain</h4>
 								<h2 class="tile__title"><a href="#">Magaluf</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-								<a href="#" class="btn">Find Out More</a>
+								<div class="tile__footer"><a href="#" class="arrow-link">Find Out More</a></div>
 							</div>
 						</div>
 					</div>
