Added remaining sessions of hospitality and catering course. Images and graphics still to be added/created

--- a/sites/hospitality-catering/unit-1/session-7/slide-5.html
+++ b/sites/hospitality-catering/unit-1/session-7/slide-5.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Childcare &middot; Unit 1 &middot; Session 3</title>
+		<title>Childcare &middot; Unit 1 &middot; Session 6</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=1024">
 		<link rel="icon" type="image/ico" href="../../favicon.ico">
@@ -26,25 +26,46 @@
 			<div class="container">
 				<div class="wrap">
 					<div class="hgroup">
-						<h1 class="hgroup__title">Introduction</h1>
+						<h1 class="hgroup__title">Risks to personal security</h1>
 					</div>
-					<p>Welcome to Session 3! In this Session, we will take a close look at the various factors that can have an impact on the success of hospitality and catering organisations.</p>
-					<p>The hospitality and catering industry is fast-moving and can be subject to change in terms of customer demand and trends.</p>
-					<p>For this reason, it is important to understand the different elements that have influence the industry, both positively and negatively.</p>
-					<p>When you’re ready to get started, click to move onto  <a href="slide-2.html">page 2</a>.</p>
+					<p>Workers in the hospitality and catering industry may also be exposed to situations that present a risk to their personal security.</p>
+					<div class="boxout think-first">
+						<h2 class="think-first__title">Think First</h2>
+						<p>Can you think of any situations that could present a risk to personal security in hospitality or catering roles? Type some ideas into the box below before you move on.</p>
+						<form class="journal-entry">
+							<textarea rows="4" placeholder="Make some notes (optional)..."></textarea>
+							<button class="btn btn--primary btn--save"><span>Save</span></button>
+						</form>
+					</div>
+					<p>Risks to personal security may arise when dealing with:</p>
+					<ul>
+						<li>Disagreements between customers</li>
+						<li>Customers who have been drinking alcohol or taking drugs</li>
+						<li>Customers who are verbally abusive</li>
+						<li>Customers who are physically abusive</li>
+						<li>Large amounts of money or high value items in open areas</li>
+						<li>Customer complaints</li>
+					</ul>
+					<p>In particular, young workers with limited experience, workers responsible for opening or locking up the establishment and night shift workers/lone workers who have fewer people around them may be most at risk in these situations.</p>
+					<p>Risks to personal security can be minimised by:</p>
+					<ul>
+						<li>Making sure outside areas are well lit and perhaps have CCTV cameras installed</li>
+						<li>Make senior staff members responsible for high risk tasks, such as dealing with difficult/abusive customers, handling cash and opening/locking up</li>
+						<li>Offering training to staff on how to handle difficult and abusive customers</li>
+						<li>Making sure lone workers know what to do and who to contact in an emergency</li>
+					</ul>
 				</div>
 			</div>
 			<ul class="site-nav">
-				<li class="site-nav__item site-nav__prev inactive"><a href="#" class="site-nav__link">Prev</a></li>
-				<li class="site-nav__item"><a href="slide-1.html" class="site-nav__link selected">1</a></li>
+				<li class="site-nav__item site-nav__prev"><a href="slide-4.html" class="site-nav__link">Prev</a></li>
+				<li class="site-nav__item"><a href="slide-1.html" class="site-nav__link">1</a></li>
 				<li class="site-nav__item"><a href="slide-2.html" class="site-nav__link">2</a></li>
 				<li class="site-nav__item"><a href="slide-3.html" class="site-nav__link">3</a></li>
 				<li class="site-nav__item"><a href="slide-4.html" class="site-nav__link">4</a></li>
-				<li class="site-nav__item"><a href="slide-5.html" class="site-nav__link">5</a></li>
+				<li class="site-nav__item"><a href="slide-5.html" class="site-nav__link selected">5</a></li>
 				<li class="site-nav__item"><a href="slide-6.html" class="site-nav__link">6</a></li>
 				<li class="site-nav__item"><a href="slide-7.html" class="site-nav__link">7</a></li>
-				<li class="site-nav__item"><a href="slide-8.html" class="site-nav__link">8</a></li>
-				<li class="site-nav__item site-nav__next"><a href="slide-2.html" class="site-nav__link">Next</a></li>
+				<li class="site-nav__item site-nav__next"><a href="slide-6.html" class="site-nav__link">Next</a></li>
 			</ul>
 		</div>
 		<script src="../../../_core/js/jquery-1.12.0.min.js"></script>
