--- a/sites/hospitality-catering/unit-1/session-8/slide-1.html
+++ b/sites/hospitality-catering/unit-1/session-8/slide-1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Childcare &middot; Unit 1 &middot; Session 3</title>
+		<title>Childcare &middot; Unit 1 &middot; Session 8</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=1024">
 		<link rel="icon" type="image/ico" href="../../favicon.ico">
@@ -27,11 +27,11 @@
 				<div class="wrap">
 					<div class="hgroup">
 						<h1 class="hgroup__title">Introduction</h1>
+						<p class="hgroup__text">Welcome to Session 8 of Unit 1!</p>
 					</div>
-					<p>Welcome to Session 3! In this Session, we will take a close look at the various factors that can have an impact on the success of hospitality and catering organisations.</p>
-					<p>The hospitality and catering industry is fast-moving and can be subject to change in terms of customer demand and trends.</p>
-					<p>For this reason, it is important to understand the different elements that have influence the industry, both positively and negatively.</p>
-					<p>When you’re ready to get started, click to move onto  <a href="slide-2.html">page 2</a>.</p>
+					<p>This Session is all about understanding how food and food-related practices can cause ill health. As you work through this Session, you will learn about food related causes of ill health, food safety legislation and the role of the Environmental Health Officer (EHO). You will also find out about common types of food poisoning and symptoms of food induced ill health.</p>
+					<p>The knowledge and understanding that you develop during this Session will be assessed through an online assessment. You’ll see lots of helpful hints and tips throughout this Session, which will help you to prepare for this assessment.</p>
+					<p>Ok, let’s get started! Click to move onto <a href="slide-2.html">page 2</a> and find out about the importance of safe and hygienic working practices when preparing and cooking food.</p>
 				</div>
 			</div>
 			<ul class="site-nav">
@@ -44,6 +44,13 @@
 				<li class="site-nav__item"><a href="slide-6.html" class="site-nav__link">6</a></li>
 				<li class="site-nav__item"><a href="slide-7.html" class="site-nav__link">7</a></li>
 				<li class="site-nav__item"><a href="slide-8.html" class="site-nav__link">8</a></li>
+				<li class="site-nav__item"><a href="slide-9.html" class="site-nav__link">9</a></li>
+				<li class="site-nav__item"><a href="slide-10.html" class="site-nav__link">10</a></li>
+				<li class="site-nav__item"><a href="slide-11.html" class="site-nav__link">11</a></li>
+				<li class="site-nav__item"><a href="slide-12.html" class="site-nav__link">12</a></li>
+				<li class="site-nav__item"><a href="slide-13.html" class="site-nav__link">13</a></li>
+				<li class="site-nav__item"><a href="slide-14.html" class="site-nav__link">14</a></li>
+				<li class="site-nav__item"><a href="slide-15.html" class="site-nav__link">15</a></li>
 				<li class="site-nav__item site-nav__next"><a href="slide-2.html" class="site-nav__link">Next</a></li>
 			</ul>
 		</div>
