--- a/sites/hospitality-catering/unit-1/session-9/slide-3.html
+++ b/sites/hospitality-catering/unit-1/session-9/slide-3.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Childcare &middot; Unit 1 &middot; Session 3</title>
+		<title>Childcare &middot; Unit 1 &middot; Session 9</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=1024">
 		<link rel="icon" type="image/ico" href="../../favicon.ico">
@@ -26,25 +26,25 @@
 			<div class="container">
 				<div class="wrap">
 					<div class="hgroup">
-						<h1 class="hgroup__title">Introduction</h1>
+						<h1 class="hgroup__title">Evaluating options</h1>
 					</div>
-					<p>Welcome to Session 3! In this Session, we will take a close look at the various factors that can have an impact on the success of hospitality and catering organisations.</p>
-					<p>The hospitality and catering industry is fast-moving and can be subject to change in terms of customer demand and trends.</p>
-					<p>For this reason, it is important to understand the different elements that have influence the industry, both positively and negatively.</p>
-					<p>When you’re ready to get started, click to move onto  <a href="slide-2.html">page 2</a>.</p>
+					<p>All of the information on the previous page can help you to identify and review suitable options when proposing the new hospitality and catering provision.</p>
+					<p>Once you have identified the options that are available, you can begin to review the options and hopefully identify one option that is most suitable.</p>
+					<p>You could begin by writing a <strong>summary</strong> of each option (this is a short description, which includes all of the key/relevant information about the option). Then, based on each summary, perhaps you can then identify the main <strong>advantages</strong> and <strong>disadvantages</strong> of each option.</p>
+					<p>Advantages are all of the potential positive points – Why is the option a good option? What could make this a successful provision?</p>
+					<p>Disadvantages would be the potentially negative points – Why would this option not be the right choice? What could go wrong with the provision?</p>
+					<p>Creating a SWOT analysis is a very useful tool that can help you to identify advantages and disadvantages. Move on to the next page to learn more.</p>
 				</div>
 			</div>
 			<ul class="site-nav">
-				<li class="site-nav__item site-nav__prev inactive"><a href="#" class="site-nav__link">Prev</a></li>
-				<li class="site-nav__item"><a href="slide-1.html" class="site-nav__link selected">1</a></li>
+				<li class="site-nav__item site-nav__prev"><a href="slide-2.html" class="site-nav__link">Prev</a></li>
+				<li class="site-nav__item"><a href="slide-1.html" class="site-nav__link">1</a></li>
 				<li class="site-nav__item"><a href="slide-2.html" class="site-nav__link">2</a></li>
-				<li class="site-nav__item"><a href="slide-3.html" class="site-nav__link">3</a></li>
+				<li class="site-nav__item"><a href="slide-3.html" class="site-nav__link selected">3</a></li>
 				<li class="site-nav__item"><a href="slide-4.html" class="site-nav__link">4</a></li>
 				<li class="site-nav__item"><a href="slide-5.html" class="site-nav__link">5</a></li>
 				<li class="site-nav__item"><a href="slide-6.html" class="site-nav__link">6</a></li>
-				<li class="site-nav__item"><a href="slide-7.html" class="site-nav__link">7</a></li>
-				<li class="site-nav__item"><a href="slide-8.html" class="site-nav__link">8</a></li>
-				<li class="site-nav__item site-nav__next"><a href="slide-2.html" class="site-nav__link">Next</a></li>
+				<li class="site-nav__item site-nav__next"><a href="slide-4.html" class="site-nav__link">Next</a></li>
 			</ul>
 		</div>
 		<script src="../../../_core/js/jquery-1.12.0.min.js"></script>
