--- a/sites/hospitality-catering/unit-1/session-7/slide-1.html
+++ b/sites/hospitality-catering/unit-1/session-7/slide-1.html
@@ -27,11 +27,11 @@
 				<div class="wrap">
 					<div class="hgroup">
 						<h1 class="hgroup__title">Introduction</h1>
+						<p class="hgroup__text">Welcome to Session 7 of Unit 1!</p>
 					</div>
-					<p>Welcome to Session 3! In this Session, we will take a close look at the various factors that can have an impact on the success of hospitality and catering organisations.</p>
-					<p>The hospitality and catering industry is fast-moving and can be subject to change in terms of customer demand and trends.</p>
-					<p>For this reason, it is important to understand the different elements that have influence the industry, both positively and negatively.</p>
-					<p>When you’re ready to get started, click to move onto  <a href="slide-2.html">page 2</a>.</p>
+					<p>This Session is all about understanding how hospitality and catering provision meets health and safety requirements. As you work through this Session, you will learn about personal safety responsibilities and control measures in the workplace. You will also find out about risks to personal safety within hospitality and catering.</p>
+					<p>The knowledge and understanding that you develop during this Session will be assessed through an online assessment. You’ll see lots of helpful hints and tips throughout this Session, which will help you to prepare for this assessment.</p>
+					<p>Ok, let’s get started! Click to move onto <a href="slide-2.html">page 2</a> and find out about personal safety responsibilities.</p>
 				</div>
 			</div>
 			<ul class="site-nav">
@@ -43,7 +43,6 @@
 				<li class="site-nav__item"><a href="slide-5.html" class="site-nav__link">5</a></li>
 				<li class="site-nav__item"><a href="slide-6.html" class="site-nav__link">6</a></li>
 				<li class="site-nav__item"><a href="slide-7.html" class="site-nav__link">7</a></li>
-				<li class="site-nav__item"><a href="slide-8.html" class="site-nav__link">8</a></li>
 				<li class="site-nav__item site-nav__next"><a href="slide-2.html" class="site-nav__link">Next</a></li>
 			</ul>
 		</div>
