--- a/sites/hospitality-catering/unit-1/session-8/slide-4.html
+++ b/sites/hospitality-catering/unit-1/session-8/slide-4.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Childcare &middot; Unit 1 &middot; Session 3</title>
+		<title>Childcare &middot; Unit 1 &middot; Session 8</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=1024">
 		<link rel="icon" type="image/ico" href="../../favicon.ico">
@@ -26,25 +26,31 @@
 			<div class="container">
 				<div class="wrap">
 					<div class="hgroup">
-						<h1 class="hgroup__title">Introduction</h1>
+						<h1 class="hgroup__title">Cross-contamination</h1>
 					</div>
-					<p>Welcome to Session 3! In this Session, we will take a close look at the various factors that can have an impact on the success of hospitality and catering organisations.</p>
-					<p>The hospitality and catering industry is fast-moving and can be subject to change in terms of customer demand and trends.</p>
-					<p>For this reason, it is important to understand the different elements that have influence the industry, both positively and negatively.</p>
-					<p>When you’re ready to get started, click to move onto  <a href="slide-2.html">page 2</a>.</p>
+					<p>One of the main reasons for maintaining safe and hygienic practice in a cooking environment is to ensure that harmful bacteria is not transferred from one area of food to another. This is called <strong>cross-contamination</strong>. This can cause food poisoning which in some instances can lead to very serious illness and even death in those that are vulnerable (such as the very young or the elderly). Food poisoning occurs when bacteria (such as clostridium perfingens or salmonella) are passed from raw meat onto other foods such as cooked dishes.</p>
+					<p>Bacteria need certain conditions in order to grow. One of the main factors in the growth of bacteria is <strong>temperature</strong>. Bacteria grow rapidly at 37°C, which is usually room or body temperature. Between 5 and 63°C, they continue to grow, although the rate at which they grow changes. This is known as the <strong>danger zone</strong>. At very cold temperatures, bacteria become dormant – they are not killed, but they do not grow or multiply.</p>
+					<p>Bacteria growth can be avoided through the use good personal hygiene, safe food storage, preparation and cooking techniques.</p>
 				</div>
 			</div>
 			<ul class="site-nav">
-				<li class="site-nav__item site-nav__prev inactive"><a href="#" class="site-nav__link">Prev</a></li>
-				<li class="site-nav__item"><a href="slide-1.html" class="site-nav__link selected">1</a></li>
+				<li class="site-nav__item site-nav__prev"><a href="slide-3.html" class="site-nav__link">Prev</a></li>
+				<li class="site-nav__item"><a href="slide-1.html" class="site-nav__link">1</a></li>
 				<li class="site-nav__item"><a href="slide-2.html" class="site-nav__link">2</a></li>
 				<li class="site-nav__item"><a href="slide-3.html" class="site-nav__link">3</a></li>
-				<li class="site-nav__item"><a href="slide-4.html" class="site-nav__link">4</a></li>
+				<li class="site-nav__item"><a href="slide-4.html" class="site-nav__link selected">4</a></li>
 				<li class="site-nav__item"><a href="slide-5.html" class="site-nav__link">5</a></li>
 				<li class="site-nav__item"><a href="slide-6.html" class="site-nav__link">6</a></li>
 				<li class="site-nav__item"><a href="slide-7.html" class="site-nav__link">7</a></li>
 				<li class="site-nav__item"><a href="slide-8.html" class="site-nav__link">8</a></li>
-				<li class="site-nav__item site-nav__next"><a href="slide-2.html" class="site-nav__link">Next</a></li>
+				<li class="site-nav__item"><a href="slide-9.html" class="site-nav__link">9</a></li>
+				<li class="site-nav__item"><a href="slide-10.html" class="site-nav__link">10</a></li>
+				<li class="site-nav__item"><a href="slide-11.html" class="site-nav__link">11</a></li>
+				<li class="site-nav__item"><a href="slide-12.html" class="site-nav__link">12</a></li>
+				<li class="site-nav__item"><a href="slide-13.html" class="site-nav__link">13</a></li>
+				<li class="site-nav__item"><a href="slide-14.html" class="site-nav__link">14</a></li>
+				<li class="site-nav__item"><a href="slide-15.html" class="site-nav__link">15</a></li>
+				<li class="site-nav__item site-nav__next"><a href="slide-5.html" class="site-nav__link">Next</a></li>
 			</ul>
 		</div>
 		<script src="../../../_core/js/jquery-1.12.0.min.js"></script>
