--- a/sites/hospitality-catering/unit-1/session-9/slide-1.html
+++ b/sites/hospitality-catering/unit-1/session-9/slide-1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Childcare &middot; Unit 1 &middot; Session 3</title>
+		<title>Childcare &middot; Unit 1 &middot; Session 9</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=1024">
 		<link rel="icon" type="image/ico" href="../../favicon.ico">
@@ -27,11 +27,12 @@
 				<div class="wrap">
 					<div class="hgroup">
 						<h1 class="hgroup__title">Introduction</h1>
-					</div>
-					<p>Welcome to Session 3! In this Session, we will take a close look at the various factors that can have an impact on the success of hospitality and catering organisations.</p>
-					<p>The hospitality and catering industry is fast-moving and can be subject to change in terms of customer demand and trends.</p>
-					<p>For this reason, it is important to understand the different elements that have influence the industry, both positively and negatively.</p>
-					<p>When you’re ready to get started, click to move onto  <a href="slide-2.html">page 2</a>.</p>
+						<p class="hgroup__text">Welcome to Session 9, which is the final Session of Unit 1!</p>
+					</div>				
+					<p>In your assessment at the end of this Unit, you will need to be able to propose a hospitality and catering provision to meet specific requirements.</p>
+					<p>In order to do this, you will apply all of the knowledge and understanding you have gained throughout this Unit in order to review options and make suitable recommendations.</p>
+					<p>As you work through this Session, you’ll see lots of hints and tips on how to approach this part of your assessment including key points to think about, techniques you can use to help with your decision making and access to helpful supporting information.</p>
+					<p>When you’re ready to get started, click to move onto <a href="slide-2.html">page 2</a>.</p>
 				</div>
 			</div>
 			<ul class="site-nav">
@@ -42,8 +43,6 @@
 				<li class="site-nav__item"><a href="slide-4.html" class="site-nav__link">4</a></li>
 				<li class="site-nav__item"><a href="slide-5.html" class="site-nav__link">5</a></li>
 				<li class="site-nav__item"><a href="slide-6.html" class="site-nav__link">6</a></li>
-				<li class="site-nav__item"><a href="slide-7.html" class="site-nav__link">7</a></li>
-				<li class="site-nav__item"><a href="slide-8.html" class="site-nav__link">8</a></li>
 				<li class="site-nav__item site-nav__next"><a href="slide-2.html" class="site-nav__link">Next</a></li>
 			</ul>
 		</div>
