updated wearesummer landing page

--- a/sites/wearesummer/landing-page.html
+++ b/sites/wearesummer/landing-page.html
@@ -74,7 +74,7 @@
 					</ul>
 					<h1 class="hgroup__title">#wearesummer</h1>
 					<a href="#" class="btn btn--primary btn--shadow">Apply Now</a>
-					<a href="#" class="btn btn--ghost">Secure Place Now</a>
+					<a href="#" class="btn">Secure Place Now</a>
 					<p><em>As always spaces are <strong>LIMITED!</strong></em></p>
 				</div>
 				
